[metadata]
name = Torpydo
version = 0.0.1
author = Stiven Roytman
author_email = stiven.roytman@wayne.edu
description = Wrapper around stem package to make using Tor easier in Python.
url = https://github.com/stivenroytman/Torpydo
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: GPLv3
	Operating System :: Unix
[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6
install_requires =
	stem
	psutil
	pysocks
	requests
	pycryptodome

[options.packages.find]
where = src
